<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.misk.myquizapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                style="@style/questionStyle"
                android:text="@string/q1" />

            <EditText
                android:id="@+id/q1_answer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/questionStyle"
                android:text="@string/q2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q2_answer1_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="H R G S T" />

                    <CheckBox
                        android:id="@+id/q2_answer2_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="R I L S A" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q2_answer3_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="T O O M T" />

                    <CheckBox
                        android:id="@+id/q2_answer4_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="W Q R G S" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/questionStyle"
                android:text="@string/q3" />

            <RadioGroup
                android:id="@+id/q3_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q3_answer1_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3542" />

                <RadioButton
                    android:id="@+id/q3_answer2_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2456" />

                <RadioButton
                    android:id="@+id/q3_answer3_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3214" />

                <RadioButton
                    android:id="@+id/q3_answer4_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3216" />
            </RadioGroup>


            <TextView
                style="@style/questionStyle"
                android:text="@string/q4" />

            <RadioGroup
                android:id="@+id/q4_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q4_answer1_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.2" />

                <RadioButton
                    android:id="@+id/q4_answer2_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12" />

                <RadioButton
                    android:id="@+id/q4_answer3_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="39.37" />

                <RadioButton
                    android:id="@+id/q4_answer4_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.394" />
            </RadioGroup>

            <TextView
                style="@style/questionStyle"
                android:text="@string/q5" />

            <RadioGroup
                android:id="@+id/q5_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q5_answer1_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Drawing" />

                <RadioButton
                    android:id="@+id/q5_answer2_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Writing" />

                <RadioButton
                    android:id="@+id/q5_answer3_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Eating" />

                <RadioButton
                    android:id="@+id/q5_answer4_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Stirring" />
            </RadioGroup>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/yourScore" />

            <TextView
                android:id="@+id/score_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:textSize="48sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorAccent"
                android:onClick="submitAnswers"
                android:text="Submit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
